Refactor DossierDataService to DossierRequestServicea