@@ -1,357 +1,110 @@
 package ma.sg.its.octroicreditcore.service;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.AllArgsConstructor;
-import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import ma.sg.its.octroicreditcore.Specification.DossierKpiSpecification;
 import ma.sg.its.octroicreditcore.dto.*;
-import ma.sg.its.octroicreditcore.dto.kpi.KpiDossierData;
-import ma.sg.its.octroicreditcore.enumeration.DossierStatus;
 import ma.sg.its.octroicreditcore.enumeration.RequestStatus;
 import ma.sg.its.octroicreditcore.exception.TechnicalException;
 import ma.sg.its.octroicreditcore.mapper.*;
-import ma.sg.its.octroicreditcore.mapper.kpi.KpiDataMapper;
 import ma.sg.its.octroicreditcore.model.*;
-import ma.sg.its.octroicreditcore.model.comments.Comment;
-import ma.sg.its.octroicreditcore.repository.*;
-import ma.sg.its.octroicreditcore.strategy.DossierCreation;
-import ma.sg.its.octroicreditcore.strategy.DossierCreationContext;
-import ma.sg.its.octroicreditcore.util.Assert;
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang.ObjectUtils;
-import org.apache.commons.lang.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
+import ma.sg.its.octroicreditcore.repository.DossierDataRepository;
+import ma.sg.its.octroicreditcore.repository.DossierRequestRepository;
+import ma.sg.its.octroicreditcore.repository.DossierReturnDecisionRepository;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.*;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-
-import static ma.sg.its.octroicreditcore.constant.ErrorsConstants.CANNOT_PERFORM_THIS_ACTION;
-import static ma.sg.its.octroicreditcore.constant.ErrorsConstants.DOSSIER_NOT_EXIST;
 
 @Service
 @Transactional
 @Slf4j
 @AllArgsConstructor
-@NoArgsConstructor
-public class DossierDataService {
+public class DossierRequestService {
 
-	public static final String INVALID_OR_NULL_DOSSIER_REQUEST_DTO = "Invalid or null dossier request DTO";
-	public static final String AMORTIZABLE_LOAN_OR_DOSSIER_UUID_MUST_BE_NOT_NULL = "Amortizable loan detail Or Dossier uuid must be not null";
+    private final DossierRequestRepository dossierRequestRepository;
+    private final DossierRequestMapper dossierRequestMapper;
+    private final RequestWarrantyMapper requestWarrantyMapper;
+    private final DossierReturnDecisionRepository dossierReturnDecisionRepository;
+    private final DossierDataRepository dossierDataRepository;
+    private final UserMapper userMapper;
+    private final BeneficiaryMapper beneficiaryMapper;
+    private final PropertyMapper propertyMapper;
+    private final RequestRepresentativeMapper representativeMapper;
 
-	@Autowired
-	private DossierDataRepository dossierDataRepository;
-
-	@Autowired
-	private DossierDataMapper dossierDataMapper;
-
-	@Autowired
-	private DossierAttachmentTypeService dossierAttachmentTypeService;
-
-	@Autowired
-	private CustomerCardRepository customerCardRepository;
-
-	@Autowired
-	private UserService userService;
-
-	@Autowired
-	private UserMapper userMapper;
-
-	@Autowired
-	private DossierUserRepository dossierUserRepository;
-
-	@Autowired
-	private DossierUserMapper dossierUserMapper;
-
-	@Autowired
-	private DebtRepository debtRepository;
-
-	@Autowired
-	private DebtInfonRepository debtInfonRepository;
-	
-	@Autowired
-	private DebtService debtService;
-
-	@Autowired
-	private DossierRequestRepository dossierRequestRepository;
-
-	@Autowired
-	private  ReassignmentRequestMapper reassignmentRequestMapper;
-
-	@Autowired
-	private  ReassignmentRequestRepository reassignmentRequestRepository;
-
-	@Autowired
-	private DossierKpiSpecification<DossierKpiView> dossierKpiSpecification;
-
-	@Autowired
-	private KpiDataMapper kpiDataMapper;
-
-	@Autowired
-	private RequestWarrantyMapper requestWarrantyMapper;
-
-	@Autowired
-	private RestrictionMapper restrictionMapper;
-
-	@Autowired
-	DossierCreationContext dossierCreationContext;
-
-	@Autowired
-	private DossierAttachmentTypeMapper dossierAttachmentTypeMapper;
-
-	@Autowired
-	private CustomerMapper customerMapper;
-
-	@Autowired
-	private TaskService taskService;
-    @Autowired
-    private TaskRepository taskRepository;
-
-	@Autowired
-	private AmortizableLoanRepository amortizableLoanRepository;
-
-	@Autowired
-	private AmortizableLoanMapper amortizableLoanMapper;
-
-	@Autowired
-	private PropertyMapper propertyMapper;
-	@Autowired
-	private BeneficiaryMapper beneficiaryMapper;
-    private static final List<String> TASK_STATUS_CODES = Arrays.asList(
-            DossierStatus.OPCV.name(),
-            DossierStatus.DECS.name(),
-            DossierStatus.TDSC_GEN.name()
+    public static final String INVALID_OR_NULL_DOSSIER_REQUEST_DTO = "Invalid or null dossier request DTO";
+    private static final List<String> FINAL_STATUSES = List.of(
+            RequestStatus.REJECTED.toString(),
+            RequestStatus.ACCEPTED.toString(),
+            RequestStatus.CLOSED.toString()
     );
 
-	private final static  List<String> searchableProperteies=Arrays.asList(
-			"numeroDossier", "clientFullname", "designationProduct",
-			"marketShorthandGlobal", "loanAmount", "initiator", "assignee", "stage", "status",
-			"designation", "drCode", "drppCode", "ucCode", "agencyCode");
-    @Autowired
-    private GuarantorMapper guarantorMapper;
 
-	public DossierDataDto create(DossierDataDto dossierDto){
+    public List<DossierRequestDto> getDossierRequests(String dossierUuid) {
+        return dossierRequestMapper.mapToListDto(dossierRequestRepository.findAllByDossierUuid(dossierUuid));
+    }
 
-		DossierCreation strategy= dossierCreationContext.resolve(dossierDto);
-		return strategy.create(dossierDto);
-	}
+    public DossierRequestDto getDossierRequestByUuid(String uuid) {
+        return dossierRequestMapper.convertToDTO(dossierRequestRepository.findByUuid(uuid));
+    }
+    @Transactional
+    public DossierRequestDto createDossierRequest(DossierRequestDto newRequestDto) {
+        validateRequestDto(newRequestDto);
 
-	public void updateProspect(DossierDataDto dossierDataDto, DossierData old) {
-		if(old != null){
-			CustomerCard customerCard = customerMapper.convertCustomerCardToEntity(dossierDataDto.getCustomerData());
-			CustomerCard savedCard = customerCardRepository.save(customerCard);
-			old.setCustomerData(savedCard);
-		}
-	}
+        DossierData dossierData = loadDossierData(newRequestDto.getDossier().getUuid());
 
-	public DossierDataDto update(DossierDataDto dossierDto) {
-		Assert.notNull(dossierDto.getUuid(), CANNOT_PERFORM_THIS_ACTION);
-		DossierData oldDossier = dossierDataRepository.findByUuid(dossierDto.getUuid());
-		Assert.exists(oldDossier, DOSSIER_NOT_EXIST);
-		DossierData newDossier = convertToEntity(dossierDto);
-		if(dossierDto.getCustomerData() != null &&
-				dossierDto.getCustomerData().getCustomer() != null &&
-				dossierDto.getCustomerData().getCustomer().isProspect() &&
-				Arrays.asList(DossierStatus.INIT.toString(), DossierStatus.INCA_VALD.toString()).contains(dossierDto.getCodeStatus())){
-			updateProspect(dossierDto, oldDossier);
-		}
-		if (newDossier.getStatus() != null) {
-			oldDossier.setStatus(newDossier.getStatus());
-		}
-       syncGuarantors(dossierDto, oldDossier);
-		//TODO change Hardcoded String 022 to properties.local
-		if (oldDossier.getLoanData() != null && oldDossier.getLoanData().getIsExternDebtsRetrieved() != null &&
-				!oldDossier.getLoanData().getIsExternDebtsRetrieved() && newDossier.getDebts() != null) {
-			Predicate<Debt> p = debt -> debt != null && !"022".equals(debt.getEstablishmentCode());
-			List<Debt> debtList = newDossier.getDebts().stream().filter(p).collect(Collectors.toList());
-			debtRepository.saveAll(debtList);
-			oldDossier.getDebts().addAll(debtList);
-		}
-		if (oldDossier.getLoanData() != null && oldDossier.getLoanData().getIsExternDebtsInfnRetrieved() != null &&
-				!oldDossier.getLoanData().getIsExternDebtsInfnRetrieved() && newDossier.getDebtsinfon() != null
-				&& !newDossier.getDebtsinfon().isEmpty()) {
-			debtInfonRepository.saveAll(newDossier.getDebtsinfon());
-			oldDossier.getDebtsinfon().addAll(newDossier.getDebtsinfon());
-		}
+        closePreviousRequest(newRequestDto.getDossier().getUuid());
 
-		if (newDossier.getWarranties() != null) {
-			if(Arrays.asList(
-					DossierStatus.INIT.toString(), DossierStatus.INCA_VALD.toString(), DossierStatus.INCA_DECS.toString(), DossierStatus.INCA_AANR.toString(),
-					DossierStatus.INCA_AVRS_RANR.toString(), DossierStatus.INCA_AVRS.toString(), DossierStatus.INCA_DECS_RS.toString()
-			).contains(oldDossier.getStatus())) {
-				oldDossier.getWarranties().clear();
-				newDossier.getWarranties().forEach(w-> w.setId(null));
-			}
-			Set<Long> warrantyIds = oldDossier.getWarranties().stream().map(Warranty::getId).collect(Collectors.toSet());
-			newDossier.getWarranties().removeIf(warranty -> warrantyIds.contains(warranty.getId()));
-			// Handle proposed warranties logic
-			updateProposedWarranties(newDossier, oldDossier);
-			oldDossier.getWarranties().addAll(newDossier.getWarranties());
-		}else {
-			oldDossier.getWarranties().clear();
-		}
+        DossierRequest newRequest = dossierRequestMapper.convertToEntity(newRequestDto);
+        newRequest.setId(null);
+        newRequest.setDossier(dossierData);
 
-		if (newDossier.getRestrictions() != null && !newDossier.getRestrictions().isEmpty()) {
-			Set<Long> restrictionIds = oldDossier.getRestrictions().stream().map(Restriction::getId).collect(Collectors.toSet());
-			newDossier.getRestrictions().removeIf(restriction -> restrictionIds.contains(restriction.getId()));
-			oldDossier.getRestrictions().addAll(newDossier.getRestrictions());
-		}
+        linkWarrantiesToRequest(newRequestDto, newRequest);
+        linkPropertiesToBeneficiaries(newRequestDto, newRequest);
+        syncRepresentative(newRequestDto, newRequest);
+        if(newRequest.getGuarantors() != null ) newRequest.getGuarantors().forEach(g-> g.setDossierRequest(newRequest));
+        DossierRequest saved = dossierRequestRepository.save(newRequest);
+        log.info("DossierRequest créé uuid={}", saved.getUuid());
 
+        return dossierRequestMapper.convertToDTO(saved);
+    }
 
-		// Set Debt Ratio (Taux d'endettement) in LoanData
-		if (oldDossier.getLoanData() != null && newDossier.getLoanData() != null) {
-			Double debtRatio = debtService.getDebtRatio(oldDossier, dossierDto);
-			newDossier.getLoanData().setDebtRatio(debtRatio);
-		}
-
-		// Set Debt Ratio (Taux d'endettement) in LoanData
-		if (newDossier.getLoanData() != null && oldDossier.getLoanData() != null) {
-			oldDossier.getLoanData().setIsExternDebtsRetrieved(newDossier.getLoanData().getIsExternDebtsRetrieved());
-			oldDossier.getLoanData().setIsExternDebtsInfnRetrieved(newDossier.getLoanData().getIsExternDebtsInfnRetrieved());
-		}
-
-	   if(Objects.nonNull(newDossier.getCustomerData())&& Objects.nonNull(newDossier.getCustomerData().getCard()) && Objects.nonNull(oldDossier.getCustomerData()) && Objects.nonNull(oldDossier.getCustomerData().getCard())) {
-			 oldDossier.getCustomerData().getCard().setMarket(newDossier.getCustomerData().getCard().getMarket());
-		}
-
-		oldDossier.setInsuranceData((InsuranceData) ObjectUtils.defaultIfNull(newDossier.getInsuranceData(),oldDossier.getInsuranceData()));
-		oldDossier.setFinancialData((FinancialData) ObjectUtils.defaultIfNull(newDossier.getFinancialData(),oldDossier.getFinancialData()));
-		oldDossier.setLoanData((LoanData) ObjectUtils.defaultIfNull(newDossier.getLoanData(),oldDossier.getLoanData()));
-		oldDossier.setCoFinancing((Boolean) ObjectUtils.defaultIfNull(newDossier.getCoFinancing(),oldDossier.getCoFinancing()));
-		oldDossier.setEmployer((Employer) ObjectUtils.defaultIfNull(newDossier.getEmployer(),oldDossier.getEmployer()));
-		oldDossier.setNotary((Notary) ObjectUtils.defaultIfNull(newDossier.getNotary(),oldDossier.getNotary()));
-		oldDossier.setOpcDeliveryDate((LocalDate) ObjectUtils.defaultIfNull(newDossier.getOpcDeliveryDate(),oldDossier.getOpcDeliveryDate()));
-		oldDossier.setDateOfReceiptOpcSigned((LocalDate) ObjectUtils.defaultIfNull(newDossier.getDateOfReceiptOpcSigned(),oldDossier.getDateOfReceiptOpcSigned()));
-		oldDossier.setMinuteRequestCommitmentDate((LocalDate) ObjectUtils.defaultIfNull(newDossier.getMinuteRequestCommitmentDate(),oldDossier.getMinuteRequestCommitmentDate()));
-		oldDossier.setDateOfReceiptMinuteAndCommitment((LocalDate) ObjectUtils.defaultIfNull(newDossier.getDateOfReceiptMinuteAndCommitment(),oldDossier.getDateOfReceiptMinuteAndCommitment()));
-		oldDossier.setDateOfReceiptPhysicalFile((LocalDate) ObjectUtils.defaultIfNull(newDossier.getDateOfReceiptPhysicalFile(),oldDossier.getDateOfReceiptPhysicalFile()));
-		oldDossier.setFirstReleasedDate(newDossier.getFirstReleasedDate() == null ? oldDossier.getFirstReleasedDate(): newDossier.getFirstReleasedDate());
-		oldDossier.setCcgCommessionMatrix((CcgCommessionMatrix) ObjectUtils.defaultIfNull(newDossier.getCcgCommessionMatrix(),oldDossier.getCcgCommessionMatrix()));
-
-		if (newDossier.getComments() != null) {
-            Set<String> CommentUUIDs = oldDossier.getComments().stream().map(Comment::getUuid).collect(Collectors.toSet());
-            newDossier.getComments().removeIf(comment -> CommentUUIDs.contains(comment.getUuid()));
-            oldDossier.getComments().addAll(newDossier.getComments());
-		}
-
-		linkPropertiesToBeneficiaries(dossierDto, oldDossier);
-		prepareDossier(oldDossier);
-        syncRepresentatives(dossierDto, oldDossier);
-		// set dossier-user relationship if exist
-		if (dossierDto.getDossierUsers() != null)
-			insertDossierUser(dossierDto, oldDossier);
-
-		oldDossier.setAssignee(newDossier.getAssignee());
-		oldDossier.setPoolCandidate(newDossier.getPoolCandidate());
-		oldDossier.setHasTaskExpertise(newDossier.getHasTaskExpertise());
-		oldDossier.setAccord(newDossier.getAccord());
-		oldDossier.setProspectUuid(newDossier.getProspectUuid());
-		oldDossier.setFlowStatus(newDossier.getFlowStatus());
-
-		DossierData updatedData = dossierDataRepository.save(oldDossier);
-		return convertToDto(updatedData);
-	}
-    public void syncGuarantors(DossierDataDto newDossier, DossierData dossier) {
-        if (newDossier.getGuarantors() == null) {
-            dossier.getGuarantors().clear();
-            return;
-        }
-
-        Map<Long, GuarantorDto> newDtoMap = newDossier.getGuarantors().stream()
-                .filter(dto -> dto.getId() != null)
-                .collect(Collectors.toMap(GuarantorDto::getId, dto -> dto));
-
-        dossier.getGuarantors().removeIf(g -> g.getDossierRequest() == null && g.getId() != null && !newDtoMap.containsKey(g.getId()));
-		dossier.getGuarantors().forEach(p -> {
-			if(p.getDossierRequest() != null && p.getId() != null && !newDtoMap.containsKey(p.getId())){
-				p.setDossier(null);
-			}
-		});
-        for (Guarantor existingGar : dossier.getGuarantors()) {
-            if (existingGar.getId() != null && newDtoMap.containsKey(existingGar.getId())) {
-                guarantorMapper.updateFromDto(newDtoMap.get(existingGar.getId()), existingGar);
+    private void syncRepresentative(DossierRequestDto newRequestDto, DossierRequest newRequest) {
+        if(newRequest.getRepresentatives() != null) newRequest.getRepresentatives().clear();
+        else { newRequest.setRepresentatives(new ArrayList<>());}
+        if(newRequestDto.getRepresentatives() != null && !newRequestDto.getRepresentatives().isEmpty()) {
+            for (RepresentativeDto repDto : newRequestDto.getRepresentatives()) {
+                RequestRepresentative  rep = representativeMapper.toEntity(repDto);
+                rep.setDossierRequest(newRequest);
+                linkRepresentativeRelationships(repDto, rep, newRequest);
+                newRequest.getRepresentatives().add(rep);
             }
         }
-
-        newDossier.getGuarantors().stream()
-                .filter(dto -> dto.getId() == null)
-                .map(guarantorMapper::convertToEntity)
-                .peek(g -> g.setDossier(dossier))
-                .forEach(dossier.getGuarantors()::add);
-    }
-
-    public void syncRepresentatives(DossierDataDto newDossier, DossierData dossier) {
-        if (CollectionUtils.isEmpty(newDossier.getRepresentatives())) {
-            clearAllRepresentativeReferences(dossier);
-            dossier.getRepresentatives().clear();
-            return;
-        }
-        Set<Long> incomingIds = newDossier.getRepresentatives().stream()
-                .map(RepresentativeDto::getId)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-
-        dossier.getRepresentatives().removeIf(r -> r.getDossierRequest() == null && r.getId() != null && !incomingIds.contains(r.getId()));
-		dossier.getRepresentatives().forEach(p -> {
-			if(p.getDossierRequest() != null && p.getId() != null && !incomingIds.contains(p.getId())){
-				p.setDossier(null);
-			}
-		});
-        Map<Long, Representative> existingById = dossier.getRepresentatives().stream()
-                .filter(r -> r.getId() != null)
-                .collect(Collectors.toMap(Representative::getId, r -> r));
-
-        for (RepresentativeDto repDto : newDossier.getRepresentatives()) {
-            Representative rep = upsertRepresentative(repDto, existingById, dossier);
-            linkRepresentativeRelationships(repDto, rep, dossier);
-        }
-    }
-
-    private Representative upsertRepresentative(
-            RepresentativeDto dto,
-            Map<Long, Representative> existingById,
-            DossierData dossier) {
-
-        Representative rep;
-
-        if (dto.getId() != null && existingById.containsKey(dto.getId())) {
-            rep = existingById.get(dto.getId());
-            rep.unlinkAllBeneficiaries();
-            rep.unlinkAllGuarantors();
-            rep.unlinkAllCustomers();
-        } else {
-            rep = new Representative();
-            rep.setDossier(dossier);
-            dossier.getRepresentatives().add(rep);
-        }
-
-        rep.setFirstname(dto.getFirstname());
-        rep.setLastname(dto.getLastname());
-        rep.setCin(dto.getCin());
-        rep.setCinIssuedAt(dto.getCinIssuedAt());
-
-        return rep;
     }
 
     private void linkRepresentativeRelationships(
             RepresentativeDto dto,
-            Representative entity,
-            DossierData dossier) {
+            RequestRepresentative entity,
+            DossierRequest request) {
 
-        linkCustomerRelationship(dto, entity, dossier);
-        linkBeneficiaryRelationships(dto, entity, dossier);
-        linkGuarantorRelationships(dto, entity, dossier);
+        linkCustomerRelationship(dto, entity, request.getDossier());
+        linkBeneficiaryRelationships(dto, entity, request);
+        linkGuarantorRelationships(dto, entity, request);
     }
 
-    private void linkCustomerRelationship(RepresentativeDto dto, Representative entity, DossierData dossier) {
+    private void linkGuarantorRelationships(RepresentativeDto dto, RequestRepresentative entity, DossierRequest request) {
+        if (CollectionUtils.isEmpty(dto.getGuarantors()) || CollectionUtils.isEmpty(request.getGuarantors())) {
+            return;
+        }
+
+        dto.getGuarantors().forEach(garDto -> linkGuarantor(entity, garDto, request));
+    }
+
+
+    private void linkCustomerRelationship(RepresentativeDto dto, RequestRepresentative entity, DossierData dossier) {
         if (dto.getCustomer() == null || dossier.getCustomerData() == null) {
             return;
         }
@@ -364,567 +117,182 @@ public class DossierDataService {
         }
     }
 
-    private void linkBeneficiaryRelationships(RepresentativeDto dto, Representative entity, DossierData dossier) {
-        if (CollectionUtils.isEmpty(dto.getBeneficiaries()) || CollectionUtils.isEmpty(dossier.getBeneficiaries())) {
+    private void linkBeneficiaryRelationships(RepresentativeDto dto, RequestRepresentative entity, DossierRequest request) {
+        if (CollectionUtils.isEmpty(dto.getBeneficiaries()) || CollectionUtils.isEmpty(request.getBeneficiaries())) {
             return;
         }
 
-        dto.getBeneficiaries().forEach(benDto -> linkBeneficiary(entity, benDto, dossier));
+        dto.getBeneficiaries().forEach(benDto -> linkBeneficiary(entity, benDto, request));
     }
 
-    private void linkBeneficiary(Representative entity, RepresentativeBeneficiaryDto benDto, DossierData dossier) {
+    private void linkBeneficiary(RequestRepresentative entity, RepresentativeBeneficiaryDto benDto, DossierRequest request) {
         if (benDto.getBeneficiary() == null || benDto.getProxyDate() == null) {
             return;
         }
 
-        dossier.getBeneficiaries().stream()
+        request.getBeneficiaries().stream()
                 .filter(b -> isSameBeneficiary(b, benDto.getBeneficiary()))
                 .findFirst()
                 .ifPresent(beneficiary -> entity.linkBeneficiary(beneficiary, benDto.getProxyDate()));
     }
 
-    private void linkGuarantorRelationships(RepresentativeDto dto, Representative entity, DossierData dossier) {
-        if (CollectionUtils.isEmpty(dto.getGuarantors()) || CollectionUtils.isEmpty(dossier.getGuarantors())) {
-            return;
-        }
-
-        dto.getGuarantors().forEach(garDto -> linkGuarantor(entity, garDto, dossier));
+    private boolean isSameBeneficiary(RequestBeneficiary beneficiary, BeneficiaryDto dto) {
+        return beneficiary != null && (
+                beneficiary.getId() != null && beneficiary.getId().equals(dto.getId()) ||
+                        beneficiary.getUuid() != null && beneficiary.getUuid().equals(dto.getUuid())
+        );
     }
-
-    private void linkGuarantor(Representative entity, RepresentativeGuarantorDto garDto, DossierData dossier) {
+    private void linkGuarantor(RequestRepresentative entity, RepresentativeGuarantorDto garDto, DossierRequest request) {
         if (garDto.getGuarantor() == null || garDto.getProxyDate() == null) {
             return;
         }
 
-        dossier.getGuarantors().stream()
+        request.getGuarantors().stream()
                 .filter(g -> isSameGuarantor(g, garDto.getGuarantor()))
                 .findFirst()
                 .ifPresent(guarantor -> entity.linkGuarantor(guarantor, garDto.getProxyDate()));
     }
 
-    private boolean isSameBeneficiary(Beneficiary beneficiary, BeneficiaryDto dto) {
-        return beneficiary != null && (
-				beneficiary.getId() != null && beneficiary.getId().equals(dto.getId()) ||
-						beneficiary.getUuid() != null && beneficiary.getUuid().equals(dto.getUuid())
-		);
-    }
-
-    private boolean isSameGuarantor(Guarantor guarantor, GuarantorDto dto) {
+    private boolean isSameGuarantor(RequestGuarantor guarantor, GuarantorDto dto) {
         return guarantor != null &&
-				(guarantor.getId() != null && guarantor.getId().equals(dto.getId()) ||
-								guarantor.getUuid() != null && guarantor.getUuid().equals(dto.getUuid()));
-    }
-    private void clearAllRepresentativeReferences(DossierData dossier) {
-        if (dossier.getRepresentatives() != null) {
-            dossier.getRepresentatives().forEach(rep -> {
-                rep.unlinkAllBeneficiaries();
-                rep.unlinkAllGuarantors();
-                rep.unlinkAllCustomers();
-            });
-        }
-    }
-	private void updateProposedWarranties(DossierData newDossier, DossierData oldDossier) {
-		List<Warranty> proposedWarranties = newDossier.getWarranties()
-				.stream()
-				.filter(warranty -> List.of(WarrantyType.PROPOSED, WarrantyType.AUTO).contains(warranty.getType()))
-				.collect(Collectors.toList());
-
-		if (!proposedWarranties.isEmpty()) {
-			oldDossier.getWarranties().removeIf(warranty -> List.of(WarrantyType.PROPOSED, WarrantyType.AUTO).contains(warranty.getType()));
-		}
-	}
-
-	private void insertDossierUser(DossierDataDto dossierDto, DossierData oldDossier) {
-        DossierUserDto duserDto = new ArrayList<>(dossierDto.getDossierUsers()).get(0);
-		if (duserDto != null && duserDto.getUser() != null) {
-			User user = userService.getUserBy(duserDto.getUser().getMatricule());
-			if (user == null) {
-				user = userService.getOrSaveUser(duserDto.getUser());
-			}
-
-			Optional<DossierUser> duser = dossierUserRepository.findByIdDossierIdAndIdUserIdAndIdCodeRole(
-					oldDossier.getId(), user.getId(), duserDto.getCodeRole());
-			if (!duser.isPresent()) {
-				DossierUser dossierUser = new DossierUser(oldDossier, user, duserDto.getCodeProfession(), duserDto.getCodeRole());
-				dossierUserRepository.save(dossierUser);
-			}
-		}
-	}
-
-	@Transactional(readOnly = true)
-	public DossierDataDto getByUuid(String uuid) {
-		Assert.notNull(uuid, CANNOT_PERFORM_THIS_ACTION);
-		DossierData dossier = dossierDataRepository.findByUuid(uuid);
-		Assert.exists(dossier, DOSSIER_NOT_EXIST);
-        DossierDataDto dto = convertToDto(dossier);
-        List<Task> tasks = taskRepository.findByDossierUuidAndDossierCodeStatusIn(uuid, TASK_STATUS_CODES);
-
-        Map<String, Task> latestTasks = tasks.stream()
-                .collect(Collectors.toMap(
-                        Task::getDossierCodeStatus,
-                        t -> t,
-                        (t1, t2) -> t1.getEntryDate().isAfter(t2.getEntryDate()) ? t1 : t2
-                ));
-        if (latestTasks.containsKey(DossierStatus.OPCV.name())) {
-            dto.setValidationOpcDate(latestTasks.get(DossierStatus.OPCV.name()).getEntryDate());
-        }
-        if (latestTasks.containsKey(DossierStatus.DECS.name())) {
-            dto.setApprovalDate(latestTasks.get(DossierStatus.DECS.name()).getEntryDate());
-        }
-        if (latestTasks.containsKey(DossierStatus.TDSC_GEN.name())) {
-            dto.setDscTransferDate(latestTasks.get(DossierStatus.TDSC_GEN.name()).getEntryDate());
-        }
-        return dto;
-	}
-
-	private void prepareDossier(DossierData dossier) {
-		updateGuarantors(dossier);
-		updateComments(dossier);
-		updateWarranties(dossier);
-		updateRestrictions(dossier);
-        updateRepresentatives(dossier);
-	}
-    private void updateRepresentatives(DossierData dossier) {
-        List<Representative> representatives = dossier.getRepresentatives();
-        if (representatives != null && !representatives.isEmpty()) {
-            representatives.forEach(r -> r.setDossier(dossier));
-        }
-    }
-	private void linkPropertiesToBeneficiaries(DossierDataDto dto, DossierData existingDossier) {
-		initializeCollections(existingDossier);
-		Map<String, Property> propertyPool = new HashMap<>();
-
-		if (dto.getPropertyData() != null && dto.getPropertyData().getProperties() != null) {
-			processProperties(dto.getPropertyData().getProperties(), existingDossier, propertyPool);
-		}else{
-			existingDossier.getProperties().clear();
-		}
-
-		if (dto.getBeneficiaries() != null) {
-			syncBeneficiaries(dto.getBeneficiaries(), existingDossier, propertyPool);
-		}else {
-			existingDossier.getBeneficiaries().clear();
-		}
-	}
-
-	private void processProperties(List<PropertyDto> propDtos, DossierData dossier, Map<String, Property> pool) {
-		if (dossier.getProperties() == null) dossier.setProperties(new ArrayList<>());
-
-		Map<Long, PropertyDto> dtoMap = propDtos.stream()
-				.filter(p -> p.getId() != null)
-				.collect(Collectors.toMap(PropertyDto::getId, p -> p));
-
-		dossier.getProperties().removeIf(p -> p.getDossierRequest() == null && p.getId() != null && !dtoMap.containsKey(p.getId()));
-		dossier.getProperties().forEach(p -> {
-			if(p.getDossierRequest() != null && p.getId() != null && !dtoMap.containsKey(p.getId())){
-				p.setDossier(null);
-			}
-		});
-		for (PropertyDto pDto : propDtos) {
-			Property property;
-			if (pDto.getId() != null) {
-				property = dossier.getProperties().stream()
-						.filter(p -> p.getId().equals(pDto.getId())).findFirst()
-						.orElseGet(() -> propertyMapper.convertToEntity(pDto)); // Cas rare
-				propertyMapper.updateFromDto(pDto, property);
-				property.setDossier(dossier);
-
-			} else {
-				property = propertyMapper.convertToEntity(pDto);
-                property.setDossier(dossier);
-                dossier.getProperties().add(property);
-			}
-            fillPropertyPool(property, pDto, pool);
-		}
-	}
-
-	private void syncBeneficiaries(List<BeneficiaryDto> dtos, DossierData dossier, Map<String, Property> pool) {
-		if (dossier.getBeneficiaries() == null) dossier.setBeneficiaries(new ArrayList<>());
-
-		Map<Long, BeneficiaryDto> dtoMap = dtos.stream()
-				.filter(p -> p.getId() != null)
-				.collect(Collectors.toMap(BeneficiaryDto::getId, p -> p));
-
-		dossier.getBeneficiaries().removeIf(p -> p.getDossierRequest() == null && p.getId() != null && !dtoMap.containsKey(p.getId()));
-		dossier.getBeneficiaries().forEach(p -> {
-			if(p.getDossierRequest() != null && p.getId() != null && !dtoMap.containsKey(p.getId())){
-				p.setDossier(null);
-			}
-		});
-
-		dossier.getBeneficiaries().forEach(benef -> {
-			if(dtoMap.containsKey(benef.getId())){
-				BeneficiaryDto bDto = dtoMap.get(benef.getId());
-				beneficiaryMapper.updateFromDto(bDto, benef);
-				benef.syncProperties(bDto.getProperties(), pool);
-				benef.syncRangs(bDto.getRangs(), pool);
-				benef.setDossier(dossier);
-			}
-		});
-
-		for (BeneficiaryDto bDto : dtos) {
-			if (bDto.getId() == null) {
-				boolean alreadyExists = dossier.getBeneficiaries().stream()
-						.anyMatch(b -> b.getId() == null && bDto.getUuid() != null && bDto.getUuid().equals(b.getUuid()));
-
-				if (!alreadyExists) {
-					Beneficiary beneficiary = beneficiaryMapper.convertToEntity(bDto);
-					beneficiary.setDossier(dossier);
-					beneficiary.syncProperties(bDto.getProperties(), pool);
-					beneficiary.syncRangs(bDto.getRangs(), pool);
-					dossier.getBeneficiaries().add(beneficiary);
-				}
-			}
-		}
-	}
-
-
-	private void fillPropertyPool(Property p, PropertyDto dto, Map<String, Property> pool) {
-		if (dto == null) return;
-		String key = (dto.getId() != null ? dto.getId().toString() : (dto.getUuid() != null ? dto.getUuid() : null));
-		if (key != null) pool.put(key, p);
-	}
-
-	private void initializeCollections(DossierData dossier) {
-		if (dossier.getBeneficiaries() == null) dossier.setBeneficiaries(new ArrayList<>());
-		if (dossier.getProperties() == null) dossier.setProperties(new ArrayList<>());
-	}
-
-	private void updateGuarantors(DossierData dossier) {
-		List<Guarantor> newGuarantors = dossier.getGuarantors();
-		if (newGuarantors != null && !newGuarantors.isEmpty()) {
-			newGuarantors.forEach(g -> g.setDossier(dossier));
-		}
-	}
-
-	private void updateComments(DossierData dossier) {
-		List<Comment> comments = dossier.getComments();
-		if (comments != null && !comments.isEmpty()) {
-			comments.forEach(c -> c.setDossier(dossier));
-		}
-	}
-
-	private void updateWarranties(DossierData dossier) {
-		List<Warranty> warranties = dossier.getWarranties();
-		if (warranties != null && !warranties.isEmpty()) {
-			warranties.forEach(c -> c.setDossier(dossier));
-		}
-	}
-
-	private void updateRestrictions(DossierData dossier) {
-		List<Restriction> restrictions = dossier.getRestrictions();
-		if (restrictions != null && !restrictions.isEmpty()) {
-			restrictions.forEach(c -> c.setDossier(dossier));
-		}
-	}
-
-	private DossierData convertToEntity(DossierDataDto dossierDataDto) {
-		return dossierDataMapper.convertToEntity(dossierDataDto);
-	}
-
-	private DossierDataDto convertToDto(DossierData dossierData) {
-		DossierDataDto dossierDataDto = dossierDataMapper.convertToDTO(dossierData);
-		dossierDataDto.setCodeDossier(StringUtils.leftPad(dossierData.getId().toString(), 8, "0"));
-		if(!CollectionUtils.isEmpty(dossierData.getDossierAttachmentTypes())){
-			dossierDataDto.setDossierAttachmentTypes(
-					dossierData.getDossierAttachmentTypes().stream().map(dossierAttachmentTypeMapper::convertToDTO).collect(Collectors.toList())
-			);
-		}
-		return dossierDataDto;
-	}
-
-	@Transactional
-	public List<DossierAttachmentTypeDto> createDossierAttachmentTypes(String uuid,
-																	   RefAttachmentTypesCodesDto refAttachmentTypesCodes) {
-		Assert.notNull(uuid, "You cannot perform this action");
-		DossierDataDto dossier = getByUuid(uuid);
-		Assert.exists(dossier, "Dossier not exists");
-		return dossierAttachmentTypeService.generateDossierAttachmentTypeList(dossier, refAttachmentTypesCodes);
-	}
-
-	public List<DossierAttachmentTypeDto> getDossierAttachmentTypes(String uuid) {
-		return dossierAttachmentTypeService.getDossierAttachmentTypeList(uuid);
-	}
-
-	@Transactional(readOnly = true)
-	public List<DossierUserDto> getDossierUser(String dossierUuid, String userMatricule) {
-		List<DossierUser> listDossierUser = dossierUserRepository.findByDossierUuidAndUserMatricule(dossierUuid,
-				userMatricule);
-		List<DossierUserDto> listDossierUserDto = new ArrayList<>();
-		for (DossierUser dossierUser : listDossierUser) {
-			listDossierUserDto.add(dossierUserMapper.convertToDTO(dossierUser));
-		}
-
-		return listDossierUserDto;
-	}
-
-	@Transactional(readOnly = true)
-	public List<DossierUserDto> getDossierUserByUuid(String dossierUuid) {
-		List<DossierUser> listDossierUser = dossierUserRepository.findByDossierUuid(dossierUuid);
-		List<DossierUserDto> listDossierUserDto = new ArrayList<>();
-		for (DossierUser dossierUser : listDossierUser) {
-			listDossierUserDto.add(dossierUserMapper.convertToDTO(dossierUser));
-		}
-		return listDossierUserDto;
-	}
-
-	public Optional<DossierRequest> getLastDossierRequestInprogress(String dossierUuid){
-		return dossierRequestRepository.findFirstByRequestStatusAndDossierUuidOrderByCreatedAtDesc(
-				RequestStatus.IN_PROGRESS.toString(),
-				dossierUuid
-		);
-	}
-
-
-	@Transactional
-	public DossierDataDto applyRestrictionsAndWarrantiesChanges(String uuid, NotificationGeneratorDto notificationGeneratorDto) {
-		Assert.notNull(uuid, CANNOT_PERFORM_THIS_ACTION);
-
-		DossierData dossierData = fetchDossierByUuid(uuid);
-		processRestrictions(dossierData, notificationGeneratorDto.getRestrictions());
-
-		DossierRequest dossierRequest = fetchDossierRequestInProgress(uuid);
-		processWarranties(dossierRequest, notificationGeneratorDto.getWarranties());
-
-		dossierRequestRepository.save(dossierRequest);
-
-		DossierData updatedDossier = dossierDataRepository.save(dossierData);
-
-		return dossierDataMapper.convertToDTO(updatedDossier);
-	}
-
-
-	private DossierData fetchDossierByUuid(String uuid) {
-		DossierData dossierData = dossierDataRepository.findByUuid(uuid);
-		Assert.exists(dossierData, DOSSIER_NOT_EXIST);
-		return dossierData;
-	}
-
-	private void processRestrictions(DossierData dossierData, List<RestrictionDto> restrictionDtos) {
-		if (restrictionDtos != null && !restrictionDtos.isEmpty()) {
-			List<Restriction> newRestrictions = restrictionDtos.stream()
-					.map(restrictionMapper::convertToEntity)
-					.collect(Collectors.toList());
-
-			Set<Long> existingRestrictionIds = dossierData.getRestrictions().stream()
-					.map(Restriction::getId)
-					.collect(Collectors.toSet());
-
-			newRestrictions.removeIf(restriction -> existingRestrictionIds.contains(restriction.getId()));
-			dossierData.getRestrictions().clear();
-			dossierData.getRestrictions().addAll(newRestrictions);
-		} else {
-			dossierData.getRestrictions().clear();
-		}
-	}
-
-	private DossierRequest fetchDossierRequestInProgress(String uuid) {
-		return getLastDossierRequestInprogress(uuid)
-				.orElseThrow(() -> new TechnicalException("Dossier request not found for UUID: " + uuid));
-	}
-
-	private void processWarranties(DossierRequest dossierRequest, List<WarrantyDto> warrantyDtos) {
-		if (warrantyDtos != null) {
-			List<RequestWarranty> warranties = warrantyDtos.stream()
-					.map(requestWarrantyMapper::convertWarrantyDtoToRequestWarranty)
-					.peek(warranty -> warranty.setDossierRequest(dossierRequest))
-					.collect(Collectors.toList());
-			dossierRequest.getRequestWarranties().clear();
-			dossierRequest.getRequestWarranties().addAll(warranties);
-		}
-	}
-
-
-	@Transactional
-	public ReassignmentRequestDto createReassignmentRequest(ReassignmentRequestDto newRequestDto) {
-
-		if(newRequestDto == null || newRequestDto.getDossier() == null) {
-			throw new TechnicalException(INVALID_OR_NULL_DOSSIER_REQUEST_DTO);
-		}
-
-		ReassignmentRequest reassignmentRequest = reassignmentRequestMapper.convertToEntity(newRequestDto);
-		DossierData dossierData = dossierDataRepository.findByUuid(newRequestDto.getDossier().getUuid());
-		reassignmentRequest.setDossier(dossierData);
-		ReassignmentRequest savedNewRequest = reassignmentRequestRepository.save(reassignmentRequest);
-
-		return reassignmentRequestMapper.convertToDTO(savedNewRequest);
-
-	}
-
-	@Transactional(readOnly = true)
-	public ReassignmentRequestDto getLastReassignInprogress(String dossierUuid){
-		Optional<ReassignmentRequest> reassignmentRequest = reassignmentRequestRepository.findFirstByRequestStatusAndDossierUuidOrderByCreatedAtDesc(
-				RequestStatus.IN_PROGRESS.toString(),
-				dossierUuid
-		);
-		 return reassignmentRequest.map(request -> reassignmentRequestMapper.convertToDTO(request)).orElse(null);
-	}
-
-	@Transactional(readOnly = true)
-    public ReassignmentRequestDto getReassignRequestByUuid(String requestUuid) {
-		return reassignmentRequestMapper.convertToDTO(reassignmentRequestRepository.findByUuid(requestUuid));
+                (guarantor.getId() != null && guarantor.getId().equals(dto.getId()) ||
+                                guarantor.getUuid() != null && guarantor.getUuid().equals(dto.getUuid()));
     }
 
-	@Transactional
-	public ReassignmentRequestDto updateReassignRequest(ReassignmentRequestDto requestDto) {
-		if(requestDto == null || requestDto.getUuid() == null){
-			throw new TechnicalException("Request data must be not null");
-		}
-		ReassignmentRequest request= reassignmentRequestRepository.findByUuid(requestDto.getUuid());
-		request.setRequestStatus(requestDto.getRequestStatus());
-		request.setValidatedBy(userMapper.convertToEntity(requestDto.getValidatedBy()));
-		request.setValidationDate(requestDto.getValidationDate());
-		return reassignmentRequestMapper.convertToDTO(reassignmentRequestRepository.save(request));
-	}
+    @Transactional
+    public DossierRequestDto updateDossierRequest(DossierRequestDto dossierRequestDto) {
+        validateRequestDto(dossierRequestDto);
 
-	@Transactional(readOnly = true)
-	public SearchResponse<KpiDossierData> searchDossierList(SearchRequest<DossierDataCriteria> searchRequest) {
+        DossierRequest existingDossierRequest = getLastDossierRequestInProgress(dossierRequestDto.getDossier().getUuid())
+                .orElseThrow(() -> new TechnicalException("Dossier request not found"));
 
-		DossierDataCriteria searchCriteria = searchRequest.getSearchCriteria();
-		Specification<DossierKpiView> specifications = DossierSpecifications.allDossierByCriteria(searchCriteria)
-			.and(dossierKpiSpecification.withEntity(searchCriteria.getEntityParams()))
-			.and(DossierSpecifications.hasTaskStatus(searchCriteria.getDossierTaskStatus()))
-			.and(DossierSpecifications.withoutPool(searchCriteria.getWithoutPool()))
-			.and(dossierKpiSpecification.withDossierUserEquals(searchCriteria.getEntityParams(),searchCriteria.getListType()))
-			.and(DossierSpecifications.inPool(searchCriteria.getInPool()))
-			.and(DossierSpecifications.withMarketCodeIn(searchCriteria.getEligibleMarketCodes(),searchCriteria.getListType()))
-			.and(DossierSpecifications.hasReassignmentRequest(RequestStatus.IN_PROGRESS.toString(), searchCriteria.getHasRequest()))
-			.and(dossierKpiSpecification.searchInProperties(searchableProperteies, searchCriteria.getSearchKeyword()))
-            .and(dossierKpiSpecification.hasReachedStatus(searchCriteria.getReachedStatus()));
+        existingDossierRequest.setRequestStatus(dossierRequestDto.getRequestStatus());
+        existingDossierRequest.setDecisionDate(LocalDateTime.now());
+        existingDossierRequest.setDecidedBy(userMapper.convertToEntity(dossierRequestDto.getDecidedBy()));
+        if (FINAL_STATUSES.contains(dossierRequestDto.getRequestStatus())) {
+            saveReturnDecision(existingDossierRequest);
+        }
 
-		int page = searchRequest.getPage();
-		int size = searchRequest.getItemsPerPage();
-		Pageable paging = PageRequest.of(page, size);
-		Page<DossierKpiView> result = dossierDataRepository.search(specifications,paging,searchCriteria.getListType());
-		return SearchResponse.<KpiDossierData>builder()
-				.result(kpiDataMapper.convertToDossierDataResult(result.getContent()))
-				.currentPage(result.getNumber() + 1)
-				.numberOfElementsPerPage(result.getSize())
-				.totalElements(result.getTotalElements())
-				.totalPages(result.getTotalPages())
-				.numberOfElementsInPage(result.getNumberOfElements())
-				.build();
-	}
+        DossierRequest updatedEntity = dossierRequestRepository.save(existingDossierRequest);
+        return dossierRequestMapper.convertToDTO(updatedEntity);
+    }
+    private void saveReturnDecision(DossierRequest request) {
+        DossierReturnDecision decision = DossierReturnDecision.builder()
+                .dossier(request.getDossier())          // déjà managé
+                .statusDossier(request.getStageDossier())
+                .tries(1)
+                .build();
+        dossierReturnDecisionRepository.save(decision);
+    }
 
-	@Transactional
-	public DossierDataDto updateWarrantiesAndRestrictions(DossierDataDto dossierDto) {
-		log.info("Core Start: update warranties : {}, and restrictions : {}", dossierDto.getWarranties(), dossierDto.getRestrictions());
-		Assert.notNull(dossierDto.getUuid(), CANNOT_PERFORM_THIS_ACTION);
-		DossierData oldDossier = dossierDataRepository.findByUuid(dossierDto.getUuid());
-		Assert.exists(oldDossier, DOSSIER_NOT_EXIST);
-		DossierData newDossier = convertToEntity(dossierDto);
+    private void validateRequestDto(DossierRequestDto dto) {
+        if (dto == null || dto.getDossier() == null || dto.getDossier().getUuid() == null) {
+            throw new TechnicalException(INVALID_OR_NULL_DOSSIER_REQUEST_DTO);
+        }
+    }
 
-		if (!CollectionUtils.isEmpty(newDossier.getWarranties())) {
-			oldDossier.getWarranties().clear();
-			oldDossier.getWarranties().addAll(newDossier.getWarranties());
-			updateWarranties(oldDossier);
-		}else {
-			oldDossier.getWarranties().clear();
-		}
+    private DossierData loadDossierData(String uuid) {
+        return Optional.ofNullable(dossierDataRepository.findByUuid(uuid))
+                .orElseThrow(() -> new EntityNotFoundException("Dossier introuvable : " + uuid));
+    }
 
-		if (!CollectionUtils.isEmpty(newDossier.getRestrictions())) {
-			oldDossier.getRestrictions().clear();
-			oldDossier.getRestrictions().addAll(newDossier.getRestrictions());
-			updateRestrictions(oldDossier);
-		}else{
-			oldDossier.getRestrictions().clear();
-		}
 
-		DossierData updatedDossier = dossierDataRepository.save(oldDossier);
-		log.info("Core End: Updated dossier : {}, warranties : {}, and restrictions : {}",updatedDossier.getDossierUsers(),
-				updatedDossier.getWarranties(), updatedDossier.getRestrictions());
-		return dossierDataMapper.convertToDTO(updatedDossier);
-	}
 
-	@Transactional
-	public DossierDataDto updateCustomerDataAndInternalLoans(DossierDataDto dossierDto) {
-		log.info("Start update: updateCustomerDataAndInternalLoans : {}",dossierDto.getCustomerData());
-		Assert.notNull(dossierDto.getUuid(), CANNOT_PERFORM_THIS_ACTION);
-		DossierData oldDossier = dossierDataRepository.findByUuid(dossierDto.getUuid());
-		Assert.exists(oldDossier, DOSSIER_NOT_EXIST);
-		DossierData newDossier = convertToEntity(dossierDto);
+    private void closePreviousRequest(String dossierUuid) {
+        dossierRequestRepository.findFirstByRequestStatusAndDossierUuidOrderByCreatedAtDesc(
+                RequestStatus.IN_PROGRESS.toString(),
+                dossierUuid
+        ).ifPresent(last -> {
+            last.setRequestStatus(RequestStatus.CLOSED.toString());
+            dossierRequestRepository.save(last);
+        });
+    }
 
-		if(Objects.nonNull(newDossier.getCustomerData())) {
-			dossierDataMapper.updateCustomerFromDto(newDossier.getCustomerData().getCustomer(), oldDossier.getCustomerData().getCustomer());
-			if(Objects.nonNull(newDossier.getCustomerData().getCard())){
-				oldDossier.getCustomerData().setCard(newDossier.getCustomerData().getCard());
-			}
-			if(Objects.nonNull(newDossier.getCustomerData().getBalanceActivity())){
-				oldDossier.getCustomerData().setBalanceActivity(newDossier.getCustomerData().getBalanceActivity());
-			}
-		}
+    private void linkWarrantiesToRequest(DossierRequestDto newRequestDto, DossierRequest newRequest) {
+        if (newRequestDto.getRequestWarranties() != null) {
+            List<RequestWarranty> warranties = newRequestDto.getRequestWarranties().stream()
+                    .map(warrantyDto -> {
+                        RequestWarranty warranty = requestWarrantyMapper.toEntity(warrantyDto);
+                        warranty.setDossierRequest(newRequest);
+                        warranty.setId(null);
+                        return warranty;
+                    }).toList();
 
-		if(!CollectionUtils.isEmpty(newDossier.getDebts())){
-			oldDossier.getDebts().removeIf(debt -> debt.getEstablishmentCode().equals("022"));
+            newRequest.setRequestWarranties(warranties);
+        }
+    }
 
-			Set<Debt> updatedDebts = new HashSet<>(oldDossier.getDebts());
-			updatedDebts.addAll(newDossier.getDebts());
+    private Optional<DossierRequest> getLastDossierRequestInProgress(String dossierUuid){
+        return dossierRequestRepository.findFirstByRequestStatusAndDossierUuidOrderByCreatedAtDesc(
+                RequestStatus.IN_PROGRESS.toString(),
+                dossierUuid
+        );
+    }
 
-			oldDossier.getDebts().addAll(new ArrayList<>(updatedDebts));
-		}
+    private void linkPropertiesToBeneficiaries(DossierRequestDto dto, DossierRequest newRequest) {
+        Map<String, RequestProperty> propertyRegistry = buildPropertyRegistry(dto, newRequest);
 
-		checkAndUpadteStatus(oldDossier);
+        if (dto.getBeneficiaries() != null) {
+            List<RequestBeneficiary> beneficiaries = dto.getBeneficiaries().stream()
+                    .map(bDto -> buildBeneficiary(bDto, newRequest, propertyRegistry))
+                    .toList();
+            newRequest.setBeneficiaries(beneficiaries);
+        }
 
-		DossierData updatedDossier = dossierDataRepository.save(oldDossier);
-		log.info("End update: updateCustomerDataAndInternalLoans : {}",updatedDossier.getCustomerData());
-		return dossierDataMapper.convertToDTO(updatedDossier);
-	}
+        newRequest.setProperties(new ArrayList<>(propertyRegistry.values()));
+    }
 
-	private void checkAndUpadteStatus(DossierData oldDossier) {
-		if (!validateControles(oldDossier)){
-			oldDossier.setStatus(getBlockedStatus(oldDossier.getStatus()));
-		}else if (Arrays.asList(DossierStatus.BLOCKED_INIT.toString(), DossierStatus.BLOCKED_INCA_VALD.toString()).contains(oldDossier.getStatus())){
-			oldDossier.setStatus(getOldStatus(oldDossier.getStatus()));
-		}
-	}
+    private Map<String, RequestProperty> buildPropertyRegistry(DossierRequestDto dto, DossierRequest newRequest) {
+        Map<String, RequestProperty> registry = new LinkedHashMap<>();
 
-	private String getOldStatus(String status) {
-		if (DossierStatus.BLOCKED_INIT.toString().equals(status)){
-			return DossierStatus.INIT.toString();
-		}
-		return  DossierStatus.INCA_VALD.toString();
-	}
+        if (dto.getPropertyData() == null
+                || dto.getPropertyData().getProperties() == null
+                || dto.getPropertyData().getProperties().isEmpty()) {
+            return registry;
+        }
 
-	private String getBlockedStatus(String status) {
-		if (DossierStatus.INIT.toString().equals(status)){
-			 return DossierStatus.BLOCKED_INIT.toString();
-		}
-		return  DossierStatus.BLOCKED_INCA_VALD.toString();
-	}
+        dto.getPropertyData().getProperties().forEach(pDto -> {
+            String key = resolvePropertyKey(pDto);
+            registry.computeIfAbsent(key, k -> createFreshProperty(pDto, newRequest));
+        });
 
-	private Boolean validateControles(DossierData oldDossier) {
-		if (oldDossier.getCustomerData() != null && oldDossier.getCustomerData().getCard() != null) {
-			return Boolean.TRUE.equals(oldDossier.getCustomerData().getCard().getIsKyc());
-		}
-		return Boolean.TRUE;
+        return registry;
+    }
 
-	}
+    private String resolvePropertyKey(PropertyDto pDto) {
+        return pDto.getId() != null ? pDto.getId().toString() : pDto.getUuid();
+    }
 
-	public void delete(String uuid) {
-		DossierData data = dossierDataRepository.findByUuid(uuid);
-		if (data == null)
-			return;
-		dossierDataRepository.deleteDossier(data);
-	}
+    private RequestProperty createFreshProperty(PropertyDto pDto, DossierRequest newRequest) {
+        pDto.setId(null);
 
-	@Transactional
-	public DossierDataDto updateDossierAndTask(UpdateDossierAndTaskRequest request) {
-		DossierDataDto updatedDossier = this.update(request.getDossier());
-		taskService.update(request.getTask());
-		return updatedDossier;
-	}
+        RequestProperty prop = propertyMapper.convertToRequestEntity(pDto);
+        prop.setId(null);
+        prop.setDossierRequest(newRequest);
 
-	@Transactional(propagation = Propagation.REQUIRES_NEW)
-	public AmortizableLoanDetailDto saveAmortizableLoanDetail(AmortizableLoanDetailDto amortizableLoanDetailDto) {
-		if(amortizableLoanDetailDto == null || amortizableLoanDetailDto.getDossierUuid() == null){
-			throw new TechnicalException(AMORTIZABLE_LOAN_OR_DOSSIER_UUID_MUST_BE_NOT_NULL);
-		}
+        return prop;
+    }
 
-		AmortizableLoanDetail existing = amortizableLoanRepository.findByDossierUuid(amortizableLoanDetailDto.getDossierUuid())
-				.orElse(new AmortizableLoanDetail());
+    private RequestBeneficiary buildBeneficiary(
+            BeneficiaryDto bDto,
+            DossierRequest newRequest,
+            Map<String, RequestProperty> registry
+    ) {
+        RequestBeneficiary beneficiary = beneficiaryMapper.convertToRequestEntity(bDto);
+        beneficiary.setId(null);
+        beneficiary.setDossierRequest(newRequest);
 
-		amortizableLoanMapper.updateEntityFromDto(amortizableLoanDetailDto, existing);
-		existing.setDossierUuid(amortizableLoanDetailDto.getDossierUuid());
-		return amortizableLoanMapper.toDto(amortizableLoanRepository.save(existing));
+        if (bDto.getProperties() != null) {
+            List<RequestProperty> linkedProps = bDto.getProperties().stream()
+                .map(pDto -> {
+                    String key = resolvePropertyKey(pDto);
+                    return registry.computeIfAbsent(key, k -> createFreshProperty(pDto, newRequest));
+                })
+                .toList();
+            beneficiary.setProperties(linkedProps);
+            beneficiary.syncRangs(bDto.getRangs(),registry);
+        }
+
+        return beneficiary;
     }
 }
